--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "AymerFi",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.3.1",
     "nodemon": "^1.18.9",
     "url": "^0.11.0"
   }
